--- a/net/templates/profile_t.html
+++ b/net/templates/profile_t.html
@@ -73,10 +73,10 @@
 					<h1>Стена</h1>
 				
 						<div class="b-message">
-							<div class="b-message-header"><img src="#" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
-						<div class="b-message"><div class="b-message-header"><img src="#" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
+							<div class="b-message-header"><img src="/i/albums/30px.jpg" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
+						<div class="b-message"><div class="b-message-header"><img src="/i/albums/30px.jpg" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
 									
-								<div class="b-message"><div class="b-message-header"><img src="#" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
+								<div class="b-message"><div class="b-message-header"><img src="/i/albums/30px.jpg" style="width: 30px; height: 30px; background: #000; display: block; float: left"><h3>Иван Кузнецов:</h3></div><p>Слышишь меня -- стенка клевая</p></div>
 			
 						<div class="b-wall-msg-form" id="wrote-message">
 							<form method="post">
