--- a/photo/templates/photo_photos.html
+++ b/photo/templates/photo_photos.html
@@ -1,29 +1,16 @@
-
-{% include i18n %}
-    
-           
-               
-                {% load thumbnail %}
-				 	<div class="b-photos-list">
-
-				
-                {% for photo in object_list %}
-                
-                        <a href="{% thumbnail photo.image 800x800 %}" class="thickbox" rel="album">
-                            <img src="{% thumbnail photo.image 200x200 %}"/>
-                            
+{% extends "base.html" %}
+{% load i18n thumbnail %}
+            {% block content %}
+                <div class="b-photos-list">
+                    {% for photo in object_list %}
+                        <a href="/i/{{ photo.image }}" class="thickbox" rel="album">
+                            <img src="{% thumbnail photo.image 200x200 detail,crop %}"/>
                         </a>
-               
-                {% endfor %}
-            	
-					</div>
+                    {% endfor %}
+                </div>
+
                 {% ifequal album.user.pk request.user.user.pk %}
-				<span id="add-photos-btn">Add photos to album</span>
-					<div class="b-add-photos" id="add-photos-form">
-	                <form action="{% url create_photo album.user.pk,album.pk %}" method="post" enctype="multipart/form-data">
-	                    {{ form.as_p }}
-	                    <input type="submit"/>
-	                </form>
-					</div>
+				    <a href="{% url create_photo %}?album_id={{ album.pk }}">{% trans "Добавить фото" %}</a>
                 {% endifequal %}
       
+            {% endblock content %}
