--- a/net/templates/profile_t.html
+++ b/net/templates/profile_t.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% load thumbnail i18n %}
-            {% block content %}
+            {% block profile %}
                 {% include "profile_include.html" %}
+            {% endblock profile %}
+            {% block content %}
 				<div class="b-block b-wall">
 					<h1>Стена</h1>
 				
