--- a/net/templates/users.html
+++ b/net/templates/users.html
@@ -3,7 +3,7 @@
     {% block content %}
         <ul>
         {% for user in object_list %}
-            <li><a href="{% url user_profile user.pk %}">{{ user.username }}</a></li>
+            <li><a href="{% url user_profile user.pk %}">{{ user.get_name }}</a></li>
         {% endfor %}
         </ul>
         <div class="clear"></div>
