comments and blogging

--- a/net/templates/base.html
+++ b/net/templates/base.html
@@ -58,11 +58,17 @@
             <div class="b-min-height">
                 &nbsp;
             </div>
+
             <div class="b-content-container">
             <form class="" action="{% url user_search %}" method="post">
                 <input type="text" name="q" value="{{ request.REQUEST.q }}" />
                 <input type="submit" value="Go" />
             </form>
+            
+            {% if user.is_authenticated %}
+                <a href="{% url auth_logout %}">{% trans "Выйти" %}</a>
+            {% endif %}
+            
             {% block profile %}
                 {% if request.user.is_authenticated %}
                     {% with request.user.user as profile %}
