--- a/net/templates/registration/login.html
+++ b/net/templates/registration/login.html
@@ -4,12 +4,12 @@
     <div class="h-registration">
         <div class="b-registration">
             <form class="b-registration-form" action="{% url auth_login %}" method="post">
-                <h2>Уже зарегистрированы?</h2>
+                <h2>{% trans "Уже зарегистрированы?" %}</h2>
                 {{ form.username.errors|join:", " }}
                 <fieldset><label for="username">E-mail</label>{{ form.username }}</fieldset>
                 <fieldset><label for="password">Пароль</label>{{ form.password }}</fieldset>
                 {{ form.next }}
-                <input type="submit" value="войти" class="signup-btn"/>
+                <input type="submit" value="{% trans "войти" %}" class="signup-btn"/>
             </form>
             <p class="b-recover-password"><a href="{% url auth_password_reset %}">{% trans "Recover password" %}</a></p>
         </div>
