--- a/media/css/personal_info.css
+++ b/media/css/personal_info.css
@@ -1,6 +1,8 @@
 .b-personal-info {
     width: 100%;
-margin-bottom: 20px;
+    background: #fff;
+    margin-bottom: 20px;
+    height: 250px;
     
 }
 .b-userpic {
