--- a/media/css/head.css
+++ b/media/css/head.css
@@ -7,16 +7,43 @@
     overflow: hidden;
     height: 40px;
 }
+.b-head a {
+    color: #fff;
+}
 .b-menu {
     margin-left: 320px;
 }
 .b-menu a {
-    color: #fff;
+    
     font-size: 1.4em;
     line-height: 2;
     padding-right: 30px;
     
 }
 .b-setlang {
-	width: 150px; float: right; margin-top: -25px;
+	width: 150px; float: right; 
+	margin-left: 20px;
+	margin-top: -5px;
+	font-size: 0.9em;
+	color: #000;
+}
+
+.b-head-right {
+    margin-top: -25px;
+    float: left;
+    width: 100%;
+}
+.b-head-right .b-logout-btn {
+    float: right;
+    color: #fff;
+    margin-right: 10px;
+   
+}
+.b-fast-search {
+    float: right; 
+    
+    
+}
+.b-setlang b {
+    color: #fff;
 }
