--- a/net/templates/profile_include.html
+++ b/net/templates/profile_include.html
@@ -2,12 +2,11 @@
                 <table class="b-personal-info">
                     <tr>
                         <td class="b-userpic">
-                            {% if profile.avatar %} <img src="{# thumbnail profile.avatar 270x270 #}" /> {% endif %}
+                            {% if profile.avatar %} <img src="{% thumbnail profile.avatar 270x270 %}" /> {% endif %}
                         </td>
                         <td>
                             {% ifequal profile.pk request.user.user.pk %}
-                                {% trans "У Вас в друзьях:" %} {{ widgets.friends.friends_count }}
-                                {% trans "Вы в друзьях у:" %} {{ widgets.friends.friends_of_count }}
+                           
                                 <a class="edit-profile-btn" id="edit-profile-btn" href="{% url edit_user_profile %}" name="edit-profile-btn">{% trans "Редактировать" %}</a>
                             {% else %}
                                 {% ifin profile request.user.user.get_friends.all %}
@@ -74,6 +73,7 @@
                                     </div>
                                     
                                 </div>
+								
                                 
                             </div>
                         </td>
