--- a/net/templates/wall_messages.html
+++ b/net/templates/wall_messages.html
@@ -24,6 +24,8 @@
                                 </li>
                             {% endfor %}
                             </ul>
+                            
+                            {% include "paginator.html" %}
                         </div>
                 </div>
             {% endblock content %}
