--- a/net/templates/profile_t.html
+++ b/net/templates/profile_t.html
@@ -17,38 +17,51 @@
               </div>
               {% endfor %}
               <div class="b-do-bar">
-                  <a href="{% url create_pm profile.pk %}" style="margin-right: 50px;" id="wrote-message-btn">{% trans "Написать" %}</a>
+                  <a href="{% url create_pm profile.pk %}?private=1" style="margin-right: 50px;" id="wrote-message-btn">{% trans "Написать" %}</a>
                   {% if widgets.wall_count %}
                       <a href="{% url wall profile.pk %}">
-                          {% blocktrans with widgets.wall_count as count %}Еще {{ count }} сообщений{% endblocktrans %}
+                          {% blocktrans with widgets.messages_count as count %}Еще {{ count }} сообщений{% endblocktrans %}
                       </a>
                   {% endif %}
               </div>
               </div>
              
-					{% if widgets.photos %}
+					{% if widgets.friends.friends_count %}
 					<div class="b-block b-photos">
-						<h1 class="header">{% trans "Друзья" %}	{% ifnotequal widgets.friends.friends_count  0 %} (<a href="{% url albums profile.pk %}">{{ widgets.friends.friends_count}}</a>)  {% endifnotequal %}</a></h1>
-					{% ifequal widgets.friends.friends_count  0 %}
-					{% trans "У вас нет друзей, попробуйте их найти" %}
-						{% endifequal %}
+						<h1 class="header">{% trans "Друзья" %}	
+                            {% if widgets.friends.friends_count %} 
+                                (<a href="{% url list_friends profile.pk %}">{{ widgets.friends.friends_count}}</a>)  
+                            {% endif %}
+                        </h1>
+                        {% if widgets.friends.friends_count %}
+                            {% for friend in widgets.friends.friends_list %}
+                                <a href="{% url user_profile friend.pk %}">
+                                    {% if friend.avatar %}
+                                    <img src="{% thumbnail friend.avatar 100x100 detail,crop %}"/>
+                                    {% endif %}
+                                    {{ friend.get_name }}
+                                </a>
+                            {% endfor %}
+                        {% else %}
+                            {% trans "У вас нет друзей, попробуйте их найти" %}
+						{% endif %}
 					</div>
 					{% endif %}
-    			{% if widgets.photos %}
 				<div class="b-block b-photos">
 					<h1 class="header">{% trans "Фотографии" %}</h1>
-					<div class="b-albums">
-					{% for photo in widgets.photos %}
-						<a class="b-photo" href="{% url photos profile.pk,photo.album.pk %}">
-						    <img src="{% thumbnail photo.image 150x100 crop,detail,upscale %}"  />
-                        </a>
-                    {% endfor %}				
-					</div>
+                    {% if widgets.photos %}
+                        <div class="b-albums">
+                        {% for photo in widgets.photos %}
+                            <a class="b-photo" href="{% url photos profile.pk,photo.album.pk %}">
+                                <img src="{% thumbnail photo.image 150x100 crop,detail,upscale %}"  />
+                            </a>
+                        {% endfor %}				
+                        </div>
+                    {% endif %}
 					<div class="b-do-bar">
 					<a href="{% url albums profile.pk %}">{% trans "Остальные фотографии" %}</a>
 					</div>
 				</div>
-				{% endif %}
 				   <div class="b-block b-wall">
 	                <h1 class="header">{% trans "Стена" %}</h1>
 
