--- a/net/templates/profile_t.html
+++ b/net/templates/profile_t.html
@@ -87,20 +87,20 @@
 					  <div class="b-block b-wall">
 		                <h1 class="header">{% trans "Обьявления" %}</h1>
 
-		                {% for msg in widgets.messages %}
+		                {% for ad in widgets.blog.ads %}
 		                <div class="b-message">
 		                    <div class="b-message-header">
 		                        <img src="/i/albums/30px.jpg" style="width: 30px; height: 30px; background: #000; display: block; float: left">	
-		                        <h3><a href="{{ msg.from_user.get_absolute_url }}">{{ msg.from_user.get_name }}</a>:</h3>
+		                        <h3><a href="{{ ad.get_absolute_url }}">{{ ad.subject }}</a>:</h3>
 		                    </div>
-		                    <p>{{ msg.body }}</p>
+		                    <p>{{ ad.text }}</p>
 		                </div>
 		                {% endfor %}
 		                <div class="b-do-bar">
-		                    <a href="{% url create_pm profile.pk %}" style="margin-right: 50px;" id="wrote-message-btn">{% trans "Написать" %}</a>
-		                    {% if widgets.wall_count %}
-		                        <a href="{% url wall profile.pk %}">
-		                            {% blocktrans with widgets.wall_count as count %}Еще {{ count }} сообщений{% endblocktrans %}
+		                    <a href="{% url post_add %}" style="margin-right: 50px;" id="wrote-message-btn">{% trans "Написать" %}</a>
+		                    {% if widgets.blog.ads_count %}
+		                        <a href="{% url post_list profile.pk "ads" %}">
+		                            {% blocktrans with widgets.blog.ads_count as count %}Еще {{ count }} сообщений{% endblocktrans %}
 		                        </a>
 		                    {% endif %}
 		                </div>
