--- a/net/templates/profile_t.html
+++ b/net/templates/profile_t.html
@@ -99,7 +99,7 @@
 		                <div class="b-do-bar">
 		                    <a href="{% url post_add %}" style="margin-right: 50px;" id="wrote-message-btn">{% trans "Написать" %}</a>
 		                    {% if widgets.blog.ads_count %}
-		                        <a href="{% url post_list profile.pk "ads" %}">
+		                        <a href="{% url post_list profile.pk,"ads" %}">
 		                            {% blocktrans with widgets.blog.ads_count as count %}Еще {{ count }} сообщений{% endblocktrans %}
 		                        </a>
 		                    {% endif %}
